# python-namespace-demo

./: README.md  pyproject.toml
src/namespace_demo/: main_demo.py
