[tool.poetry]
name = "python-namespace-demo"
version = "0.1.0"
description = ""
authors = ["Sury Soni <suryasoni@gmail.com>"]
readme = "README.md"
packages = [{include = "namespace_demo", from="src"}]

[tool.poetry.dependencies]
python = "^3.10"
python-namespace-demo-app1 = {git = "git@github.com:spsoni/python-namespace-demo-app1.git",  tag = "0.3.0"}
python-namespace-demo-app2 = {git = "git@github.com:spsoni/python-namespace-demo-app2.git",  tag = "0.1.0"}

[tool.poetry.scripts]
demo-cli = "namespace_demo.main_demo:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
